--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             camerakit:ckPermissions="strict"
             camerakit:ckCropOutput="true"
             camerakit:ckJpegQuality="100"
-            android:adjustViewBounds="false" />
+            android:adjustViewBounds="true" />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
